# rust-user-managerment-crud

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: main.rs
src/data_manager/: user.rs
src/graphics/: graphics.rs  padding.rs
src/model_data_access/: mod.rs  postgres_api.rs
src/postgres_api/: mod.rs  postgres_api.rs
