[package]
name = "postgres_user_crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pad = "0.1.6"
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4.22", features = ["std"] }
base64 = "0.22.1"
